fix(print): uproot zoom bleeding bug during print

--- a/apps/backend/src/app/globals.css
+++ b/apps/backend/src/app/globals.css
@@ -17,6 +17,19 @@ body {
     margin: 0 !important;
     padding: 0 !important;
   }
+
+  .print-reset-zoom {
+    zoom: 1 !important;
+    transform: none !important;
+  }
+
+  .print-reset-layout {
+    display: block !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    gap: 0 !important;
+    width: 100% !important;
+  }
 }
 
 @page {
